# rust-backend-template

./: .gitignore  Cargo.toml  env.example  justfile  readme.md
macros/src/: lib.rs
migrations/: 20240415125032_init.sql
src/: config.rs  events.rs  main.rs  routes.rs
src/model/: auth.rs  mod.rs  user.rs
src/model/implementation/: auth.rs  mod.rs
src/repo/: activity.rs  mod.rs  session.rs  settings.rs  tag.rs  token.rs  user.rs
src/routes/: api.rs  files.rs
src/routes/api/: activity.rs  auth.rs  password_reset.rs  sessions.rs  settings.rs  setup.rs  tags.rs  tokens.rs  users.rs  ws.rs
src/service/: auth.rs  email.rs  mod.rs  setup.rs
src/utils/: auth.rs  error.rs  extractors.rs  middlewares.rs  mod.rs  response.rs
