[package]
name = "rust-server-template-for-nuxt-frontend-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]

[dependencies]

sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "ipnetwork",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
axum = { version = "0.7.4", features = ["ws", "multipart"] }
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = [
    "trace",
    "fs",
    "compression-gzip",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.30"
rand = "0.8.5"
ring = "0.17.8"
thiserror = "1.0.58"
serde_with = "3.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] }
tower = "0.4.13"
macros = { path = "./macros" }
tokio-util = "0.7.11"
lettre = "0.11.7"
